# caps-sa-rs

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: docs.yml
cxx/: CMakeLists.txt  wrapper.cpp
cxx/CaPS-SA/: CMakeLists.txt  README.md
cxx/CaPS-SA/include/: Ext_Mem_Bucket.hpp  Genomic_Text.hpp  Spin_Lock.hpp  Suffix_Array.hpp  utility.hpp
cxx/CaPS-SA/src/: CMakeLists.txt  Genomic_Text.cpp  Suffix_Array.cpp  main.cpp  test.cpp
src/: lib.rs
